--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.3</version>
+        <version>2.7.2</version>
     </parent>
 
     <properties>
@@ -19,6 +19,8 @@
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <mockito-inline.version>3.8.0</mockito-inline.version>
+        <telegrambots-spring-boot-starter.version>5.6.0</telegrambots-spring-boot-starter.version>
+        <h2.version>2.2.224</h2.version>
     </properties>
 
     <dependencies>
@@ -38,7 +40,7 @@
         <dependency>
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots-spring-boot-starter</artifactId>
-            <version>5.6.0</version>
+            <version>${telegrambots-spring-boot-starter.version}</version>
         </dependency>
 
         <!--test-->
@@ -70,6 +72,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
